[package]
name = "stack-graphs-python-bindings"
version = "0.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stack_graphs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
stack-graphs = { git = "https://github.com/nohehf/stack-graphs.git", rev = "3c4d1a6c374d9cdc7af9626423dbc3607a85dc66", features = [
    "storage",
] }
tree-sitter-stack-graphs = { git = "https://github.com/nohehf/stack-graphs.git", rev = "3c4d1a6c374d9cdc7af9626423dbc3607a85dc66", features = [
    "cli",
] }
tree-sitter-stack-graphs-java = { git = "https://github.com/nohehf/stack-graphs.git", rev = "3c4d1a6c374d9cdc7af9626423dbc3607a85dc66" }
tree-sitter-stack-graphs-javascript = { git = "https://github.com/nohehf/stack-graphs.git", rev = "3c4d1a6c374d9cdc7af9626423dbc3607a85dc66" }
tree-sitter-stack-graphs-python = { git = "https://github.com/nohehf/stack-graphs.git", rev = "3c4d1a6c374d9cdc7af9626423dbc3607a85dc66" }
tree-sitter-stack-graphs-typescript = { git = "https://github.com/nohehf/stack-graphs.git", rev = "3c4d1a6c374d9cdc7af9626423dbc3607a85dc66" }
