[package]
name = "stack-graphs-python-bindings"
version = "0.0.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stack_graphs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
stack-graphs = { version = "0.14.1", features = ["storage"] }
tree-sitter-stack-graphs = { version = "0.10.0", features = ["cli"] }
tree-sitter-stack-graphs-java = "0.5.0"
tree-sitter-stack-graphs-javascript = "0.3.0"
tree-sitter-stack-graphs-python = "0.3.0"
tree-sitter-stack-graphs-typescript = "0.4.0"
